refs #148